--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<title>returnTrue</title>
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet"	media="screen">
-	<link href="css/style.css" rel="stylesheet" media="screen">
+	<link href="css/styles.css" rel="stylesheet" media="screen">
 </head>
 <body>
-	<div class = "row" style = "height: 100px">
+	<div class = "row" style = "height: 250px">
 	</div>
 	<div class = "row">
 		<div class = "col-md-6 col-md-offset-3">
